# game-of-life-wasm-webgl

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json  webpack.config.js
src/: lib.rs  renderer.rs  renderloop.rs  universe.rs  utils.rs
